<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rowItem_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView_taskIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/task_icon"
        android:minWidth="?attr/minTouchTargetSize"
        app:srcCompat="@drawable/ic_baseline_task_todo_24" />

    <TextView
        android:id="@+id/textView_rowItem_taskType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxWidth="48dp"
        android:minWidth="?attr/minTouchTargetSize"
        android:minLines="1"
        android:text="@string/task_type" />

    <TextView
        android:id="@+id/textView_rowItem_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxWidth="48dp"
        android:minWidth="?attr/minTouchTargetSize"
        android:minLines="1"
        android:text="@string/title" />

    <TextView
        android:id="@+id/textView_rowItem_dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="?attr/minTouchTargetSize"
        android:minLines="1"
        android:text="@string/due_date" />

    <CheckBox
        android:id="@+id/checkBox_taskDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/alpha_0"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</LinearLayout>